burst + codigo error

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
 limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
-
+limit_req_status 429;
 
 upstream servidor {
     server app:3000;
