--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.5.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.3.0",
-    "metar-decoder": "^1.0.3"
+    "metar-decoder": "^1.0.3",
+    "redis": "^4.6.10",
+    "set-interval-async": "^3.0.3"
   }
 }
