--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
     node:
         build: ./app
+        volumes:
+            - ./app/app.js:/opt/app/app.js
 
     nginx:
         image: nginx:1.25.2
@@ -43,6 +45,11 @@ services:
             - "/var/run:/var/run:rw"
             - "/sys:/sys:ro"
             - "/var/lib/docker/:/var/lib/docker:ro"
+
+    # artillery:
+    #     image: artilleryio/artillery:2.0.0-37
+    #     volumes:
+    #         - "./perf:/scripts"
 
 volumes:
     grafana_config:
