add hot-shot on node js app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         build: ./app
         volumes:
             - ./app/app.js:/opt/app/app.js
+        links:
+            - graphite
 
     nginx:
         image: nginx:1.25.2
