--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.3.1",
+    "hot-shots": "^10.0.0",
     "metar-decoder": "^1.0.3"
   }
 }
