--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.3.0",
+    "hot-shots": "^10.0.0",
     "metar-decoder": "^1.0.3"
   }
 }
