--- a/perf/package.json
+++ b/perf/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "artillery": "2.0.0-14",
-    "artillery-plugin-statsd": "^2.2.1"
+    "artillery-plugin-statsd": "^2.2.1",
+    "npm": "^10.2.0",
+    "statsd": "^0.9.0"
   }
 }
