--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "express": "^4.18.2",
     "fast-xml-parser": "^4.3.1",
     "hot-shots": "^10.0.0",
-    "metar-decoder": "^1.0.3"
+    "metar-decoder": "^1.0.3",
+    "redis": "^4.6.10",
+    "yallist": "^4.0.0"
   }
 }
