nginx config file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,14 @@
 limit_req_zone $binary_remote_addr zone=mylimit:10m rate=1r/s;
 limit_req_status 429;
 
-upstream servidor {
-    server app:3000;
+upstream api {
+    server 2c23-tp-1_node_1:3000;
 }
 
 server {
     listen 80;
     limit_req zone=mylimit;
     location / {
-        proxy_pass http://servidor/;
+        proxy_pass http://api/;
     }
 }
