--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         ports:
             - "5555:80"
         volumes:
-            - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
             - ./store/static/files:/static:ro
         links:
             - node
