--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-limit_req_zone $binary_remote_addr zone=limite:10m rate=50r/s;
+limit_req_zone $binary_remote_addr zone=limite:10m rate=30r/s;
 limit_req_status 429;
 
 upstream api {
@@ -8,7 +8,7 @@ upstream api {
 server {
     listen 80;
     
-    location /api {
+    location /api/ {
         limit_req zone=limite;
         proxy_pass http://api/;
     }
