--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
             - "/var/lib/docker/:/var/lib/docker:ro"
 
     redis:
-        image: redis/redis-stack-server:latest
+        image: redis:7
         ports:
             - "6379:6379"
 
